tests/baselines/reference/parserTypeQuery1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery1.ts (1 errors) ====
    var v: typeof A
                  ~
!!! error TS2304: Cannot find name 'A'.